@@ -1,3 +1,7 @@
+Version Next
+
+    - Add new class LocalContextExecutionControl.
+
 Version 1.0.3 Released January 5, 2024
 
     - Fix misnamed SimpleShell method: newExecSession() -> newShellSession().
